--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -65,7 +65,7 @@
               </div>
           
               <div class="producto">
-                <img src="../img/microfibra.jpg" alt="Paño de microfibra">
+                <img src="../img/Microfibra.jpg" alt="Paño de microfibra">
                 <h3>Paño de Microfibra</h3>
                 <p>$1.000</p>
                 <button class="btn-comprar">Comprar</button>
