--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="icon" href="../img/logoico.png" type="image/x-icon">
     <title>Servicios - LAVACAR</title>
 </head>
 <body>
@@ -60,7 +61,7 @@
                     <p>El pulido de ópticas de un auto consiste en restaurar la claridad y brillo de los faros, eliminando la opacidad y los rayones causados por el tiempo y las condiciones ambientales. Este proceso mejora la visibilidad nocturna y le da un aspecto renovado al vehículo, utilizando técnicas especializadas y productos de alta calidad para lograr un acabado óptimo.</p>
                 </div>
                 <div class="img-trabajo1">  
-                    <img  src="../img/pulido-opticas.jpg" alt="">
+                    <img  src="../img/pulido-opticas.jpg" alt="Trabajo de pulido/abrillantado de las opticas de un auto">
                 </div>
             </div>
             <div class="trabajos2">   
@@ -69,7 +70,7 @@
                     <p>La limpieza de interiores de un auto implica la remoción de suciedad, manchas y olores de asientos, alfombras, tapicería y otras superficies, utilizando productos específicos para cada material. Este proceso también incluye la desinfección de áreas como el volante, paneles y consola central, garantizando un ambiente fresco, higiénico y libre de impurezas dentro del vehículo.</p>
                 </div>
                 <div class="img-trabajo2">  
-                    <img  src="../img/limpieza.jpg" alt="">
+                    <img  src="../img/limpieza.jpg" alt="Trabajo de limpieza a fondo de el interior de un auto">
                 </div>
             </div>
             <div class="trabajos1">   
@@ -78,7 +79,7 @@
                     <p>El tratamiento cerámico o vidrio líquido para autos consiste en aplicar una capa protectora en la pintura del vehículo que crea una barrera resistente a contaminantes, rayones y manchas. Esta capa mejora el brillo, facilita la limpieza y protege la superficie de los efectos de los rayos UV, la suciedad y el agua, ofreciendo una mayor durabilidad y un acabado impecable por más tiempo.</p>
                 </div>
                 <div class="img-trabajo1">  
-                    <img  src="../img/ceramico.jpg" alt="">
+                    <img  src="../img/ceramico.jpg" alt="Trabajo de pulido sobre la pintura del auto con acabados espejo">
                 </div>
             </div>
             <div class="trabajos2">   
@@ -87,7 +88,7 @@
                     <p>La limpieza de llantas y chasis de un auto incluye la eliminación de suciedad, polvo de frenos, grasa y otros contaminantes de las ruedas, llantas y el chasis. Este proceso utiliza productos especiales para desinfectar, desengrasar y dar brillo a estas áreas, restaurando su apariencia y protegiendo los componentes de la corrosión, mejorando así la estética general del vehículo.</p>
                 </div>
                 <div class="img-trabajo2">  
-                    <img  src="../img/limpieza.png" alt="">
+                    <img  src="../img/limpieza.png" alt="Trabajo de limpieza sobre la parte baja del auto y llatas">
                 </div>
             </div>
             <div class="trabajos1">   
@@ -96,7 +97,7 @@
                     <p>El encerado de un auto consiste en aplicar una capa de cera sobre la pintura para protegerla de contaminantes, rayones y los efectos del clima. Este proceso ayuda a mantener el brillo, proporciona una capa adicional de protección contra los rayos UV y facilita la limpieza, dejando el vehículo con un acabado suave, brillante y bien cuidado.</p>
                 </div>
                 <div class="img-trabajo1">  
-                    <img  src="../img/encerado.png" alt="">
+                    <img  src="../img/encerado.png" alt="Trabajo tipo finish que se le aplica una cera para que sea mas duradero el trabajo previo de pulido">
                 </div>
             </div>
 
